Should fix button + alignment issues on windows. Linux will look funny now. Real + button needed in future

--- a/app/assets/stylesheets/chan.css
+++ b/app/assets/stylesheets/chan.css
@@ -4,7 +4,7 @@
     padding: 1px 0px;
     border-radius: 15px;
     text-align: center;
-    font-size: 20px;
+    font-size: 17px;
     line-height: 1.42857;
     background-color: #00000080;
     color: #ffffff80;
